# django-tutorial

./: .gitignore  LICENSE  README.md  setup.cfg
django-polls/polls/: admin.py  tests.py  urls.py  views.py
django-polls/templates/admin/: base_site.html
mysite/mysite/: urls.py
mysite/polls/: models.py
